--- a/less/pages/login.less
+++ b/less/pages/login.less
@@ -19,8 +19,9 @@
         small  {
             .opacity(100);
           a {
-            font-size: 14px;
+            font-size: 13px;
             color:#ffffff !important;
+            font-weight: bold;
             .opacity(100);
           }
         }
